--- a/expensify-app/src/styles/base/_base.scss
+++ b/expensify-app/src/styles/base/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -5,7 +9,8 @@ html {
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
-  background-color: #ffffff;
+  line-height: 1.6;
+  color: $dark-grey;
 }
 
 button {
