--- a/expensify-app/src/styles/base/_settings.scss
+++ b/expensify-app/src/styles/base/_settings.scss
@@ -1,4 +1,13 @@
 // Colors
+
+$dark-grey: #333333;
+$blue: #1c88bf;
+$dark-blue: #364051;
+
+// Font size
+
+$font-size-large: 1.8rem;
+
 // Spacing
 
 $s-size: 1.2rem;
