--- a/expensify-app/src/styles/base/_settings.scss
+++ b/expensify-app/src/styles/base/_settings.scss
@@ -1,11 +1,14 @@
 // Colors
 
 $dark-grey: #333333;
+$grey: #666666;
 $blue: #1c88bf;
 $dark-blue: #364051;
+$off-white: #f7f7f7;
 
 // Font size
 
+$font-size-small: 1.4rem;
 $font-size-large: 1.8rem;
 
 // Spacing
