--- a/expensify-app/src/styles/components/_page-header.scss
+++ b/expensify-app/src/styles/components/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   margin-bottom: $l-size;
   padding: $l-size 0;
-  background: #f7f7f7;;
+  background: $off-white;
 }
 
 .page-header__actions {
